Prepare for long term test / debugging.
Signed-off-by: Achim Kraus <achim.kraus@bosch-si.com>

--- a/californium-core/pom.xml
+++ b/californium-core/pom.xml
@@ -93,10 +93,10 @@
 					 -->
 					<!-- parallel>classes</parallel>
 					<threadCountClasses>8</threadCountClasses-->
-					<groups>org.eclipse.californium.category.Small</groups>
-					<excludedGroups>org.eclipse.californium.category.Medium,org.eclipse.californium.category.Large,org.eclipse.californium.elements.category.NativeDatagramSocketImplRequired</excludedGroups>
+					<groups>org.eclipse.californium.category.LongTerm</groups>
+					<excludedGroups>org.eclipse.californium.category.Small,org.eclipse.californium.category.Medium,org.eclipse.californium.category.Large,org.eclipse.californium.elements.category.NativeDatagramSocketImplRequired</excludedGroups>
 				</configuration>
-				<executions>
+				<!-- executions>
 					<execution>
 						<id>medium-tests</id>
 						<phase>test</phase>
@@ -133,7 +133,7 @@
 							<excludedGroups>org.eclipse.californium.category.Small,org.eclipse.californium.category.Medium,org.eclipse.californium.category.Large</excludedGroups>
 						</configuration>
 					</execution>
-				</executions>
+				</executions -->
 			</plugin>
 		</plugins>
 	</build>
