--- a/californium-core/src/test/resources/Californium-logging.properties
+++ b/californium-core/src/test/resources/Californium-logging.properties
@@ -69,6 +69,7 @@ org.eclipse.californium.core.useParentHandlers = false
 org.eclipse.californium.core.level = INFO
 org.eclipse.californium.core.network.level = INFO
 org.eclipse.californium.core.network.stack.ReliabilityLayer.level = INFO
+org.eclipse.californium.core.network.UdpMatcher.level = FINER
 
 org.eclipse.californium.elements.handlers = java.util.logging.ConsoleHandler
 org.eclipse.californium.elements.useParentHandlers = false
