--- a/californium-core/src/test/resources/Californium-logging.properties
+++ b/californium-core/src/test/resources/Californium-logging.properties
@@ -74,4 +74,5 @@ org.eclipse.californium.core.network.UdpMatcher.level = FINER
 org.eclipse.californium.elements.handlers = java.util.logging.ConsoleHandler
 org.eclipse.californium.elements.useParentHandlers = false
 org.eclipse.californium.elements.level = INFO
-org.eclipse.californium.elements.util.DirectDatagramSocketImpl.level = FINE
+org.eclipse.californium.elements.UDPConnector.level = FINER
+org.eclipse.californium.elements.util.DirectDatagramSocketImpl.level = FINER
